syntax = "proto3";
package task;

option go_package = "./rpc_impl";
option optimize_for = LITE_RUNTIME;

import "common.proto";

service ITask {
  rpc List(Task.ListReq) returns (Task.ListRes);
  rpc Create(Task.CreateReq) returns (Task.CreateRes);
  rpc Modify(Task.ModifyReq) returns (Task.ModifyRes);
}

message Task {
  message Data {
    string task_id = 1;
    string task_name = 2;
    string description = 3;
    repeated string pre_task_ids = 4;
    uint32 status = 5;
    int64 update_time = 6;
    int64 created_time = 7;
  }

  message ListReq {
    string operator_id = 1;
  }

  message ListRes {
    uint32 total = 1;
    repeated Data tasks = 2;

    common.Error err = 15;
  }

  message CreateReq {
    string operator_id = 1;
    string task_name = 2;
    string description = 3;
    repeated string pre_task_ids = 4;
  }

  message CreateRes {
    common.Error err = 15;
  }

  message ModifyReq {
    string operator_id = 1;
    string task_id = 2;
    string password = 3;
    string task_name = 4;
    string description = 5;
    repeated string pre_task_ids = 6;
    uint32 status = 7;
  }

  message ModifyRes {
    common.Error err = 15;
  }
}
